# HW1-FAST-AQ-Parser-JHB

./: example.py  pyproject.toml
.github/workflows/: main.yml  python-publish.yml
data/: make_seq.py  test_fasta_correct_unittest_output.py
seqparser/: parse.py  seq.py
tests/: test_parsers.py  test_transcribe.py
